--- a/src/app/Css/scrollbar.css
+++ b/src/app/Css/scrollbar.css
@@ -1,9 +1,8 @@
 
 body {
-    --sb-track-color: #0f1214;
+    --sb-track-color: #041C32;
     --sb-thumb-color: #f5700a;
-    /*   */
-    --sb-size: 6px;
+    --sb-size: 3px;
   }
   
   body::-webkit-scrollbar {
@@ -12,12 +11,10 @@ body {
   
   body::-webkit-scrollbar-track {
     background: var(--sb-track-color);
-    border-radius: 6px;
   }
   
   body::-webkit-scrollbar-thumb {
     background: var(--sb-thumb-color);
-    border-radius: 6px;
     
   }
   
